# array-ops

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
src/: array.rs  lib.rs  sort.rs  std_types.rs
